--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-family: 'cursive', cursive;
+  font-family: 'Lobster', cursive;
   font-size: 11px;
   color: white;
 }
