--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: sans-serif;
-  background-color: #3B4049;
+  background-color: 'white';
 }
 
 .wrapper {
